# smartsensor

./: .flake8  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pixi.toml  pyproject.toml  readme.md  readme_section_3.8.1.txt  readme_section_3.8.2.txt  requirements.txt  run_CuSO4_build_model.py  run_CuSO4_train_test_split.py  run_Fe3+_build_model.py  run_Fe3+_train_test_split.py  train_model.py
project/: .gitignore  ampiciline_ip1.sh  ampiciline_ip2.sh
project/v1.1.0/Ampiciline_focal_1/: script.sh
project/v1.1.0/Ampiciline_focal_2/: script.sh
river/: main.sh
smartsensor/: base.py  const.py  e2e.py  logger.py  main.py  predict.py  process_image.py  visualization.py
smartsensor/model/: formula.py  metric.py  partition.py  split_data.py  train.py
smartsensor/process/: any2jpg.py  data.py  features.py  normalize.py  rgb2dataframe.py  roi.py  run.py  segment.py  validate.py
smartsensor/report/: regression.py
src/: App.css  App.jsx
tests/: run_local.sh
web/: .gitignore  Readme.md  app.py  main.py  requirements.txt  style.css
web/pages/: 1_Image_Processing.py  2_Model_Prediction.py
web/result/: .gitignore
web/result/ampiciline_ratio_01/: config.json  full_RGB_model.sav  full_model_infor.txt  metrics.csv  test_testsize_0.2_.csv  testsize_0.2_RGB_model.sav  testsize_0.2_model_infor.txt  train_testsize_0.2.csv
