[tool.poetry]
name = "smartsensor"
version = "1.1.0"
description = "The sensor utilizes a smartphone camera to analyze and characterize chemical compounds."
readme = "README.md"
authors = ["Thanh-Giang (River) Tan Nguyen <nttg8100@gmail.com>", "Dung Cao <dung.cao@ttu.edu.vn>"]
license = "MIT"
homepage = "https://github.com/riverxdata/smartsensor"
repository = "https://github.com/riverxdata/smartsensor"
keywords = ["machine learning", "sensor", "smartphone"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[tool.poetry.dependencies]
python = ">=3.11"
typer = ">=0.14.0"
scikit-learn = ">=1.6.1"
pandas = ">=1.5.3"
opencv-python-headless = ">=4.11.0.86"
streamlit = ">= 1.45.1"

[tool.poetry.scripts]
smartsensor = "smartsensor.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"